# docflow

./: .env.example  .gitignore  CITATION.bib  LICENSE  README.md  docker-compose-docling-server.yaml  docker-compose.yml  pyproject.toml
backend/: main.py
backend/api/: router_download.py  router_files.py  router_pipeline.py  router_upload.py
backend/core/: config.py  pipeline.py
backend/models/: schemas.py
backend/services/: conversion_service.py  docling_service.py  storage_service.py  translation_service.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docker/ollama/: entrypoint.sh
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts
frontend/src/components/: DownloadPanel.vue  FilesPanel.vue  OutputNode.vue  PipelineMonitor.vue  UploadPanel.vue
frontend/src/stores/: pipeline.ts
specs/: architecture.md  requirements.md  roadmap.md
tests/: conftest.py  test_api_download.py  test_api_files.py  test_api_pipeline.py  test_api_upload.py  test_conversion_service.py  test_docling_service.py  test_pipeline.py  test_storage_service.py  test_translation_service.py
